--- a/my_lambdata/test.ipynb
+++ b/my_lambdata/test.ipynb
@@ -22,17 +22,12 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Looking in indexes: https://test.pypi.org/simple/\nRequirement already satisfied: lambdata-mtoce==1.0 in c:\\users\\mike\\.virtualenvs\\lambdata-mtoce-ohc_ymc4\\lib\\site-packages (1.0)\n"
+     "text": "Looking in indexes: https://test.pypi.org/simple/\nRequirement already satisfied: lambdata-mtoce==1.0.1 in c:\\users\\mike\\.virtualenvs\\lambdata-mtoce-ohc_ymc4\\lib\\site-packages (1.0.1)\n"
     }
    ],
    "source": [
-    "!pip install -i https://test.pypi.org/simple/ lambdata-mtoce==1.0"
+    "!pip install -i https://test.pypi.org/simple/ lambdata-mtoce==1.0.1"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
@@ -44,7 +39,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import datetime\n",
-    "import split_date, add_column, state_abbrev"
+    "import split_date, add_column, state_abbrev, cm"
    ]
   },
   {
